# pupptyeer

./: .gitignore  .goreleaser.yaml  CLAUDE.md  Makefile  PROTOCOL.md  PUBLISHING.md  README.md  go.mod  go.sum
.claude/skills/check-parity/: SKILL.md
.github/workflows/: ci.yml  release.yml
clients/: PARITY.md
clients/go/: client.go  go.mod  socket.go  wire.go
clients/python/: LICENSE  README.md  pupptyeer_client.py  pyproject.toml  smoke.py
clients/python-umbrella/: README.md  pupptyeer.py  pyproject.toml
clients/typescript/: README.md  index.d.ts  index.mjs  package.json  smoke.mjs
cmd/pupptyeer/: attach_unix.go  attach_windows.go  config.go  config_test.go  ctl.go  daemon.go  main.go  secure_unix.go  secure_windows.go
conformance/: py.py  run.sh  scenario.md  ts.mjs
conformance/go/: main.go
internal/protocol/: protocol.go
internal/ptyx/: ptyx.go  ptyx_unix.go  ptyx_windows.go
internal/server/: raw.go  ring_test.go  server.go  server_test.go  session.go
mcp/: auth.go  dialer.go  go.mod  go.sum  main.go  tools.go
npm/: build.mjs  platforms.mjs
npm/pupptyeer/: README.md  package.json
npm/pupptyeer/lib/: launch.cjs  resolve.cjs
pkg/ptysession/: ring.go  ring_test.go  session.go  session_test.go
